--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -82,6 +82,13 @@ jobs:
               name: serverDockerfile
               path: server/Dockerfile
 
+          - name: Upload Docker Compose
+            uses: actions/upload-artifact@v4
+            with:
+              name: dockerCompose
+              path: docker-compose.yml
+
+
     copy-files:
         name: Copy Files
         needs: [build-server, build-client]
@@ -122,8 +129,15 @@ jobs:
               name: clientDockerfile
               path: client
 
+          - name: Download Docker Compose
+            uses: actions/download-artifact@v4
+            with:
+              name: dockerCompose
+              path: docker-compose.yml 
+
           - name: Copy Files to Server
             run: |
+              scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} docker-compose.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}
               scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/client
               scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} client/Dockerfile ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/client
               scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} server/Dockerfile ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_ROOT_PATH }}/server
