--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 .env
 
+#nginx
+*nginx*
+/https
+/proxy
+
 # rust
 /target
 /client/target
