--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,6 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 EXPOSE 8080
+EXPOSE 80
 EXPOSE 8081
 WORKDIR /app/publish
 ENTRYPOINT ["dotnet", "devblog.dll"]
