--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,12 @@ services:
    image: ${DEVBLOG_SERVER_CONTAINER_NAME}
    build: ./server
    container_name: ${DEVBLOG_SERVER_CONTAINER_NAME}
+   environment: 
+     - ASPNETCORE_CERT_PASSWORD=${ASPNETCORE_CERT_PASSWORD}
+     - ASPNETCORE_CERT_PATH=${ASPNETCORE_CERT_PATH}
+     - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+     - ASPNETCORE_HTTPS_PORTS=${ASPNETCORE_HTTPS_PORTS}
+     - ASPNETCORE_HTTP_PORTS=${ASPNETCORE_HTTP_PORTS}
    volumes:
      - ${SERVER_PUBLISH_VOLUME}
      - ${SERVER_HTTPS_VOLUME}
