--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,11 +30,12 @@ services:
    build: ./server
    container_name: ${DEVBLOG_SERVER_CONTAINER_NAME}
    environment: 
-     - ASPNETCORE_CERT_PASSWORD=${ASPNETCORE_CERT_PASSWORD}
-     - ASPNETCORE_CERT_PATH=${ASPNETCORE_CERT_PATH}
-     - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+     - ASPNETCORE_Kestrel__Certificates__Default__Password=${ASPNETCORE_CERT_PASSWORD}
+     - ASPNETCORE_Kestrel__Certificates__Default__Path=${ASPNETCORE_CERT_PATH}
+    #  - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
      - ASPNETCORE_HTTPS_PORTS=${ASPNETCORE_HTTPS_PORTS}
      - ASPNETCORE_HTTP_PORTS=${ASPNETCORE_HTTP_PORTS}
+     - ASPNETCORE_URLS="https://+;http://+"
    volumes:
      - ${SERVER_PUBLISH_VOLUME}
      - ${SERVER_HTTPS_VOLUME}
