--- a/server/devblog.csproj
+++ b/server/devblog.csproj
@@ -2,9 +2,10 @@
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
+		<SpaProxyServerUrl>https://localhost:44482</SpaProxyServerUrl>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>9c535b88-0982-4726-b8dd-98fd6ca72fbe</UserSecretsId>
-	    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Discord.Net.Core" Version="3.10.0" />
