--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     build: .
     container_name: ${DEVBLOG_PROXY_CONTAINER_NAME}
     volumes:
-      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./proxy/default.conf:/etc/nginx/conf.d/default.conf
       - /etc/ssl/certs/${DEVBLOG_CERT_NAME}:/etc/ssl/certs/${DEVBLOG_CERT_NAME}
     restart: on-failure
     ports:
