--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
       - name: Build with Trunk
         run: |
-          echo ${{ secrets.API_URL }} > src/api_url.txt
+          echo "https://www.andrewtest.org/api" > src/api_url.txt
           trunk build --release  
         working-directory: client
       - name: Upload Artifacts
